--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         </div>
                         <div class="w-[60%] flex gap-2">
                             <div class="flex w-[45%]">
-                                <input type="text" class="border-y outline-none border-r w-full border-gray-300 py-2 pr-5 rounded-tr-lg rounded-br-lg" placeholder="تاریخ رفت">
+                                <input type="text" class="border-y outline-none border-r w-full border-gray-300 py-2 pr-5 rounded-tr-lg rounded-br-lg date-picker" placeholder="تاریخ رفت">
                                 <input type="text" class="border w-full outline-none border-gray-300 bg-gray-100 py-2 pr-5 rounded-tl-lg rounded-bl-lg" placeholder="تاریخ بازگشت +">
                             </div>
                             <div class="relative w-[27.5%]">
@@ -593,7 +593,7 @@
             </div>
         </section>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
