--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             </div>
         </section>
         <section id="lower-header" >
-            <!-- <div class="snow  z-[1] overflow-x-hidden">
-            </div> -->
+            <div class="snow  z-[20] overflow-x-hidden">
+            </div>
             <div>   
                 <div class="relative h-[320px]">
                     <img class="w-full h-full object-contain lower-header-img absolute left-0 top-0 transition-opacity duration-[1s] opacity-50" src="./imgs/hero-villa.webp" alt="">
